<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.aeronet.alleart.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="83dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/allearttopo"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="90dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="90dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="104dp"
                tools:layout_editor_absoluteY="268dp">

                <Button
                    android:id="@+id/btnEquipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@android:color/white"
                    android:onClick="clickEquipe"
                    android:text="@string/strEquipe"
                    android:textSize="18p" />

                <Button
                    android:id="@+id/btnCursos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@android:color/white"
                    android:onClick="clickCursos"
                    android:text="@string/strCursos"
                    android:textSize="18p"
                    tools:layout_editor_absoluteX="-61dp"
                    tools:layout_editor_absoluteY="100dp" />

                <Button
                    android:id="@+id/btnMidia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@android:color/white"
                    android:onClick="clickMdia"
                    android:text="@string/strMidia"
                    android:textSize="18p" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/strDireitos"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
